--- a/app/views/home/_activities.html.erb
+++ b/app/views/home/_activities.html.erb
@@ -1,4 +1,4 @@
-<div style="padding:0 20px;">
+<div class="activit">
   <div class="moscow_agencies">
     <div class="title">Детские учреждения Москвы
       <%= link_to 'Образовательные', activities_path(kind: 'educational'), class: 'title_link globe' %>
@@ -18,6 +18,9 @@
     <div class="clear"></div>
 
   </div>
+  
+  <div style="float:right; width:100%;	margin-left:-780px;">
+  
   <div class="socialnet">
 
     <div class="soc_widget_tab">
@@ -36,6 +39,8 @@
     <iframe src="//www.facebook.com/plugins/likebox.php?href=http%3A%2F%2Fwww.facebook.com%2Ffestivalyarkieludi&amp;width=100%&amp;height=290&amp;colorscheme=light&amp;show_faces=true&amp;border_color&amp;stream=false&amp;header=true&amp;appId=359292310775946" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100%; height:290px;" allowTransparency="true"></iframe>
     </div>
 
+  </div>
+  
   </div>
   <div class="clear"></div>
 </div>
