--- a/app/views/home/_council.html.erb
+++ b/app/views/home/_council.html.erb
@@ -21,6 +21,8 @@
     
 
   </div>
+  
+  <div style="float:right; width:100%;	margin-left:-780px;">
   <div class="trustee">
     <div class="title">Попечительский совет</div>
 
@@ -89,6 +91,8 @@
       <label for="slide9"></label>
       <label for="slide10"></label>
     </div> <!-- #active -->
+  </div>
+  
   </div>
   <div class="clear"></div>
 </div>
