--- a/app/views/home/_bright_magazine.html.erb
+++ b/app/views/home/_bright_magazine.html.erb
@@ -12,6 +12,9 @@
     </ul>
   </div>
 
+
+<div style="float:right; width:100%;	margin-left:-180px;">
+
   <div class="magazine_tab">
     <div id="show_mag_all" class="mag_tabs">
       <% Article.for_main.each do |article| %>
@@ -46,4 +49,7 @@
     <% end %>
 
   </div>
+  
+  </div>
+  <div class="clear"></div>
 </div>
