--- a/app/views/home/_contests_and_special_project.html.erb
+++ b/app/views/home/_contests_and_special_project.html.erb
@@ -13,6 +13,8 @@
     <% end %>
   </div>
 
+  <div style="float:right; width:100%;	margin-left:-345px;">
+
   <div class="spec_project_last">
     <div class="title">
       <%= link_to "Спецпроекты", special_projects_path %>
@@ -31,6 +33,8 @@
     <% end %>
   
     <div class="clear"></div>
+  </div>
+  
   </div>
   
   <div class="clear"></div>
