--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -98,7 +98,7 @@
     <div class="adv"><%= link_to image_tag('/assets/samp/adv.jpg'), "http://www.krokha.ru", "target"=>"_blank" %></div>
     <div class="bank_info">
       <div class="title">Добро пожаловать в мир ярких людей!</div>
-      <div class="order_bank_catd">Президент МОСКОВСКОГО КРЕДИТНОГО БАНКА<br />Александр Николашин</div>
+      <div class="order_bank_catd">Президент ОАО<br />«МОСКОВСКИЙ КРЕДИТНЫЙ БАНК»<br />Александр Николашин</div>
       <div class="bank_text">
 
 МОСКОВСКИЙ КРЕДИТНЫЙ БАНК <br />в честь своего 20-летия дарит городу праздник – детский творческий фестиваль «Яркие люди». 
