--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -173,7 +173,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .timer_wrapper .cntSeparator { padding-top:22px; font-weight:bold; color:#af0035; font-size:20px}
 
 .main_content .bank_info { float:right; width:410px; margin-left:3% }
-.main_content .bank_info  .order_bank_catd { background:url(../assets/samp/cards.jpg) no-repeat; padding-top:182px; float:left; width:180px; font-size:10px; line-height:13px; text-align:center}
+.main_content .bank_info  .order_bank_catd { background:url(../assets/samp/cards.jpg) no-repeat; padding-top:181px; float:left; width:180px; font-size:11px; line-height:13px; text-align:center}
 .main_content .bank_info .bank_text { color:#525252; font-size:12px; float:left; width:220px; text-align:left; margin-left:10px; background:url(../assets/samp/signature.jpg) no-repeat right 130px;}
 
 .main_content .adv { float:right; margin-left:3%; width:213px; text-align:center;}
@@ -189,7 +189,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .main_content .subscription input[type="submit"] { background:#7c7c7c; border:none; margin:0px; color:#fff; font-weight:bold; font-size:16px; -moz-border-radius:6px; border-radius:6px; -webkit-border-radius:6px; behavior: url(border-radius.htc); padding:5px 20px; margin-left:10px;}
 
 .bright_magazine { background:#ecece7; padding:10px 20px }
-.bright_magazine .magazine_control { float:left; width:175px;}
+.bright_magazine .magazine_control { float:left; width:175px; z-index:5; position:relative}
 .bright_magazine .magazine_control .title{ font-family:Futura; font-size:20px; color:#00b9e1; padding-top:20px; letter-spacing:-1px}
 
 .bright_magazine .magazine_control a.active { font-weight:bold}
@@ -248,7 +248,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 
 .activit { padding:0 20px;}
 
-.moscow_agencies { float:left; width:760px;}
+.moscow_agencies { float:left; width:760px; z-index:5; position:relative}
 .moscow_agencies .title { font-family:Futura; border-bottom:2px solid #cdcdc9; color:#4f4f4f; font-size:20px; padding:10px 0px; vertical-align: bottom}
 .moscow_agencies .title .globe { background:url(/assets/ico_globe.png) no-repeat 0px 1px; padding-left:16px;}
 .moscow_agencies .title .balloon {background:url(/assets/ico_balloon.png) no-repeat 0px 1px; padding-left:16px; }
@@ -266,7 +266,7 @@ h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 .council { padding:20px 20px;}
 .council .title { font-family:Futura; border-bottom:2px solid #cdcdc9; color:#4f4f4f; font-size:20px; padding:10px 0px;}
 
-.council .expert { float: left; width:760px;}
+.council .expert { float: left; width:760px; z-index:5; position:relative}
 
 .council .expert .exp_preview { position:relative; float:left; width:143px; margin-top:20px; margin-right:9px; text-align:center; }
 .council .expert .exp_preview.last { margin-right:0px;}
@@ -862,9 +862,9 @@ span.sim_check.active { background-position:0px 0px; }
 #footer .menu li, #footer .menu a { font-weight:bold; color:#fff; font-size:15px;}
 
 #footer .copy, #footer .create, #footer .license { opacity:0.6; line-height:1.3}
-#footer .copy { padding-bottom:12px;}
+#footer .create { padding-bottom:20px;}
 
-#footer .license { font-size:11px; padding-top:77px; width:255px; margin-left:-5px}
+#footer .license { font-size:11px; padding-top:98px; width:255px; margin-left:-5px}
 
 #footer .gen_sponsor span { opacity:0.6; font-size:17px; font-weight:600; line-height:1.2 }
 #footer .gen_sponsor img { margin-bottom:10px}
