--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -13,7 +13,7 @@
 	<div class="create license">
 	ОАО «МОСКОВСКИЙ КРЕДИТНЫЙ БАНК»<br />
 Генеральная лицензия Банка России<br />
-No. 1978 от 20 января 2000 г.
+№ 1978 от 20 января 2000 г.
 	
 	</div>
 
