many geoobjects at organization map, also representing organization activities

--- a/app/views/organizations/show.html.erb
+++ b/app/views/organizations/show.html.erb
@@ -29,7 +29,7 @@
               <th></th>
             <% end %>
             <% if first then first = false end%>
-            <td><%= y_link nil, addr, class: "to_map_link"%><span></span></td>
+            <td class='act_addr'><%= y_link nil, addr, class: "to_map_link"%><span></span></td>
           </tr>
         <% end %>
       </tbody>
