--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -55,7 +55,7 @@
       <div class="cell">
         <a href='' id="map_spoiler" ><strong>Где вы?</strong></a>
         <input id="coords_input" name='coords' class="remote_action hidden" type="text">
-        <a id="clear_map" class="clear_link" href="">Сбросить</a>
+        <a id="clear_map" class="clear_link hidden" href="">Сбросить</a>
         <div class="clear_block">
           <!--<a id="clear_all_options" href="">Сбросить все</a>-->
         </div>
