--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -70,7 +70,7 @@
           <%= link_to "названию", '#', :class => 'order_by', 'data-order' => 'title' %>
         </span>,
         <span class="sort_date">
-          <%= link_to "дате добавления", "#", :class => 'order_by', 'data-order' => 'created_at' %>
+          <%= link_to "дате добавления", "#", :class => 'order_by bold', 'data-order' => 'created_at' %>
         </span> или
         <span class="sort_rating">
           <%= link_to "рейтингу", "#", :class => 'order_by', 'data-order' => 'users_rating' %>
