additional map fixes

--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -54,7 +54,7 @@
       </div>
       <div class="cell">
         <a href='' id="map_spoiler" ><strong>Где вы?</strong></a>
-        <input id="coords_input" name='coords' class="remote_action hidden" type="text">
+        <input id="coords_input" name='coords' class="remote_action" type="text">
         <a id="clear_map" class="clear_link hidden" href="">Сбросить</a>
         <div class="clear_block">
           <!--<a id="clear_all_options" href="">Сбросить все</a>-->
