--- a/app/views/article_tags/show.html.erb
+++ b/app/views/article_tags/show.html.erb
@@ -1,8 +1,8 @@
 <% @articles.each do |article| %>
   <p>
      <%= link_to article.title, article %>
-      by <%= article.author %>
-     <%= time_ago_in_words article.created_at %> ago
+      by <%= article.author.name %>
+     <%= time_ago_in_words article.created_at %> назад
   </p>
   <p>
       <%= truncate(article.content, length: 25, omission: '...') %>
