--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -46,6 +46,12 @@
   <%== @article.content %>
 </div>
 <div class="clear"></div>
+<div class="article_tags">
+  <% @tags.each do |t| %>
+    <%= link_to t.name, tag_articles_path(tag: t.name) %>
+  <% end %>
+</div>
+<div class="clear"></div>
 <% if @comments.blank? %> <div class="comment treeview hidden"> <% else %> <div class="comment treeview"> <% end %>
   <div class="title">Комментарии</div>
   <ul>
