--- a/app/views/shared/_share_social.html.erb
+++ b/app/views/shared/_share_social.html.erb
@@ -1,18 +1,32 @@
 <div class="soc_like_button">        
 <!-- Put this script tag to the <head> of your page -->
 <script type="text/javascript" src="http://userapi.com/js/api/openapi.js?49"></script>
+<script type="text/javascript" src="http://vk.com/js/api/share.js?11" charset="windows-1251"></script>
 <script type="text/javascript">
   VK.init({apiId: 2953652, onlyWidgets: true});
 </script>
 <!-- Put this div tag to the place, where the Like block will be -->
 <div id="vk_like"></div>
 <script type="text/javascript">
-VK.Widgets.Like("vk_like", {type: "mini", height: 20});
+  VK.Widgets.Like("vk_like", {type: "mini", height: 20});
 </script>
+<div id='vk_share'>
+<script type="text/javascript"><!--
+document.write(VK.Share.button(false,{type: "round_nocount", text: "Поделиться"}));
+--></script>
+</div>
 </div>
 
 <div class="soc_like_button">   
-<iframe src="//www.facebook.com/plugins/like.php?href=<%= @fb_url %>&amp;send=false&amp;layout=button_count&amp;width=120&amp;show_faces=true&amp;action=like&amp;colorscheme=light&amp;font&amp;height=21&amp;appId=359292310775946" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:120px; height:21px;" allowTransparency="true"></iframe>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=359292310775946";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+<div class="fb-like" data-send="true" data-width="450" data-show-faces="false"></div>
 </div>    
     
 <div class="soc_like_button"> 
@@ -34,7 +48,7 @@ VK.Widgets.Like("vk_like", {type: "mini", height: 20});
     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
   })();
 </script>
-</div>  
+</div>
 
 <div class="soc_like_button"> 
 <link href="http://stg.odnoklassniki.ru/share/odkl_share.css" rel="stylesheet">
