fix 28.06 header footer 100% user menu

--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -66,6 +66,8 @@
 </div>
 
 
+<div class="wrapper">
+
 <div class="color_line_left">
 <div class="color_line_right">
 
@@ -140,4 +142,6 @@ $(function(){
 
 
 </div>    
+</div>
+
 </div>
