--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,9 @@
+<div class="footer_shadow">
+<div class="wrapper">
 <div class="footer_header"></div>
 <div class="footer_content">
-  <div class="footer_shadow">
-    <div class="wrapper">
+  
+    <div class="footer_wrapper">
       <div class="left column">
         <div class="gen_sponsor">
           
@@ -58,5 +60,7 @@
       </div>
       <div class="clear"></div>
     </div>
-  </div>
+  
+</div>
+</div>
 </div>
