--- a/app/views/activities/_search_form.html.erb
+++ b/app/views/activities/_search_form.html.erb
@@ -15,7 +15,7 @@
 	  <% end %>
         </ul>
       </div>
-      <div class="cell" style="width:200px">
+      <div class="cell cat_checkbox" >
         <strong>По категории</strong>
         <ul>
           <% @directions.each do |tag| %>
