--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -6,6 +6,8 @@
   
 </div>
 
+<div class="wrapper">
+
 <div class="color_line_left">
   <div class="color_line_right">
     <div class="header_wrapper">
@@ -75,4 +77,6 @@
 
     </div>
   </div>
+</div>
+
 </div>
