--- a/app/views/shared/_share_social.html.erb
+++ b/app/views/shared/_share_social.html.erb
@@ -26,7 +26,7 @@ document.write(VK.Share.button(false,{type: "round_nocount", text: "Подели
   js.src = "//connect.facebook.net/ru_RU/all.js#xfbml=1&appId=359292310775946";
   fjs.parentNode.insertBefore(js, fjs);
 }(document, 'script', 'facebook-jssdk'));</script>
-<div class="fb-like" data-send="true" data-width="450" data-show-faces="false"></div>
+<div class="fb-like" data-send="true" data-layout="button_count" data-width="450" data-show-faces="false"></div>
 </div>    
     
 <div class="soc_like_button"> 
