--- a/app/views/admin/activities/_form.html.erb
+++ b/app/views/admin/activities/_form.html.erb
@@ -66,13 +66,14 @@
 
   <%= f.inputs "Медиа контент" do %>
     <div class="activity_photos">
-      <%= f.semantic_fields_for :photos do |photo| %>
-        <%= render 'admin/activities/photo_fields', f: photo %>
+      <% f.object.photos.each do |ph| %>
+        <div class='thumb'>
+          <%= image_tag ph.attach.url %>
+          <%= link_to 'Убрать фотографию', '#', :class => 'remove_activity_photo', 'data-photo-id' => ph.try(:id) %>
+        </div>
       <% end %>
+      <input type="file" name="activity[photos_attributes][][attach]" multiple="multiple" accept="image"/>
     </div>
-    <%= link_to_add_association 'Добавить фотографию', f, :photos,
-                                  'data-association-insertion-method' => 'append',
-                                  'data-association-insertion-node' => '.activity_photos' %>
 
     <div class="activity_videos">
       <%= f.semantic_fields_for :videos do |video| %>
