organizations added to sphinx index

--- a/app/views/searches/show.html.erb
+++ b/app/views/searches/show.html.erb
@@ -10,6 +10,7 @@
       <ul>
         <li><%= link_to 'Все разделы', '' %></li>
         <li><%= link_to 'Москва для детей', '' %></li>
+        <li><%= link_to 'Организации', '' %></li>
         <li><%= link_to 'Журнал', '' %></li>
         <li><%= link_to 'Конкурсы', '' %></li>
         <li><%= link_to 'Экспертный совет', '' %></li>
