fixed showing nonpublished articles

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -55,7 +55,7 @@
         <%= render 'items', articles: @best_articles %>
       <% end %>
       <div class="title"><span><%= @news_category.title %></span></div>
-      <%= render 'items', articles: @news_category.articles.first(2) %>
+      <%= render 'items', articles: @news_category.articles.published.first(2) %>
     </div>
   </div>
 
