--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -1,13 +1,38 @@
-<% @best.each do |b| %>
-  <%= image_tag b.logo.url(:medium) %>
-  <%= b.title %>
-  <%= b.description %>
-<% end %>
-
-<br><br><br><br>
-
-<% @participants.each do |p| %>
-  <%= image_tag p.logo.url(:medium) %>
-  <%= p.title %>
-  <%= p.description %>
-<% end %>
+<div class="pages">
+  <div class="common">
+    <div class="post_category_menu">
+      <ul>
+        <li class="about_ico"><a href="/pages/about_festival">О фестивале</a></li>
+        <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
+        <li class="participants_ico active"><a href="/participants">Участники фестиваля</a></li>
+      </ul>
+      <div class="clear"></div>
+    </div>
+    <% if @best %>
+      <% @best.each do |b| %>
+        <%= image_tag b.logo.url(:thumb) %>
+        <%= b.title %>
+        <br>
+        <%= b.description %>
+        <br>
+      <% end %>
+    <% end %>
+    <br>
+    --------------------------------------------------
+    <br>
+    <% if @participants %>
+      <% @participants.each do |p| %>
+        <%= image_tag p.logo.url(:thumb) %>
+        <%= p.title %>
+        <br>
+        <%= p.description %>
+        <br>
+      <% end %>
+    <% end %>
+  </div>
+  <div class="sidebar">
+    <%= render 'shared/sidebar' %>
+  </div>
+  <div class="clear">
+  </div>
+</div>
