--- a/app/views/admin/participants/_form.html.erb
+++ b/app/views/admin/participants/_form.html.erb
@@ -7,7 +7,7 @@
     <%= f.input :priority, as: :number %>
 
     <%= f.input :category, as: :select, collection: [['Музыкальная сцена', 'music_stage'], ['Кукольная сцена', 'doll_stage'],
-                                                    ['Цирковая сцена', 'circus_stage'], ['Уличные театры', 'street_theather'], ['Мастер класс', 'master_class']] %>
+                                                    ['Цирковая сцена', 'circus_stage'], ['Уличные театры', 'street_theater'], ['Мастер класс', 'master_class']] %>
 
     <%= f.input :logo, as: :file, hint: f.template.image_tag(f.object.logo.url) %>
 
