--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -19,7 +19,7 @@
         <li><%= link_to 'Музыкальная сцена', '/participants?category=music_stage' %></li>
         <li><%= link_to 'Кукольная сцена', '/participants?category=doll_stage' %></li>
         <li><%= link_to 'Цирковая сцена', '/participants?category=circus_stage' %></li>
-        <li><%= link_to 'Уличные театры', '/participants?category=street_theather' %></li>
+        <li><%= link_to 'Уличные театры', '/participants?category=street_theater' %></li>
         <li><%= link_to 'Мастер-классы', '/participants?category=master_class' %></li>
       </ul>
     </div>
