--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -10,6 +10,7 @@
         <li class="about_ico"><a href="/pages/about_festival">О фестивале</a></li>
         <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
         <li class="participants_ico active"><a href="/participants">Участники фестиваля</a></li>
+        <li class="news_ico"><a href="/news">Новости фестиваля</a></li>
       </ul>
       <div class="clear"></div>
     </div>
