changed countdown to 6 latest news

--- a/app/views/news/show.html.erb
+++ b/app/views/news/show.html.erb
@@ -16,7 +16,7 @@
       <div class="clear"></div>
     </div>
     <br>
-    <%= image_tag @news.photo.url %>
+    <%= image_tag @news.photo.url(:original) %>
     <%= @news.title %>
     <%= Russian::strftime(@news.created_at, "%e %B, %A") %>
     <br>
