--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -93,31 +93,12 @@
     </div>
 
         <div class="timer">
-        	<div class="title">До начала фестиваля «Яркие люди» остается:</div>
-            
-            <div class="timer_block">
-            <div class="timer_wrapper">
-            	<div id="counter"></div>
-                <div class="date_wrapper">
-                    <div class="date">Дни</div>
-                    <div class="date">Часы</div>
-                    <div class="date">Минуты</div>
-                </div>
-            </div>
-<script type="text/javascript">
-$(function(){
-	var _date = new Date();
-	_date.setMonth(7);
-	_date.setDate(18);
-	_date.setHours(0);
-	_date.setMinutes(0);
-	_date.setSeconds(0);
-	$('#counter').countdown({
-		image: '/assets/counter.png',
-		startTime: _date
-	});
-});
-</script>
+        	<div class="title">Новости фестиваля «Яркие люди»:</div>
+            <% News.for_main.each do |n| %>
+              <%= image_tag n.photo.url %>
+              <%= n.title %>
+              <%= truncate(n.content, separator: '.', omission: '.', length: 140) %>
+            <% end %>
         </div>
             
         </div>
