changed кружки и студии to места

--- a/app/views/activities/educational.html.erb
+++ b/app/views/activities/educational.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Фестиваль Яркие Люди | Кружки и Студии
+  Фестиваль Яркие Люди | Места
 <% end %>
 
 <div class="workshop_list">
