--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,7 +22,7 @@
       <div class="center column">
         <div class="menu">
           <ul>
-            <li><%= link_to 'Кружки и студии', activities_path %></li>
+            <li><%= link_to 'Места', activities_path %></li>
             <li><%= link_to 'Яркий журнал', articles_path %></li>
             <li><%= link_to 'Фестиваль', page_path('org_komitet') %></li>
             <li><%= link_to 'Конкурсы', contests_path %></li>
