--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -58,7 +58,7 @@
 
       <div id="menu">
 	<ul class="">
-	  <li <%= 'class=selected' if @activity_page %>><%= link_to 'Кружки и студии', activities_path %></li>
+	  <li <%= 'class=selected' if @activity_page %>><%= link_to 'Места', activities_path %></li>
 	  <li <%= 'class=selected' if @article_page %>><%= link_to 'Яркий журнал', articles_path %></li>
 	  <li class="current <%= 'selected' if current_page?(page_path('about_festival')) or current_page?(page_path('org_komitet')) %>"><%= link_to 'Фестиваль', page_path('about_festival') %>
 	    <div class="sub_menu">
