--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -944,3 +944,27 @@ span.sim_check.active { background-position:0px 0px; }
 @media screen and (max-width: 1150px) {
     .socialnet .soc_widget_tab a span { width:0px; overflow:hidden}
 }
+
+
+
+
+/* NEWS CAROUSEL */
+
+.main_content .news_in_main { margin-right:670px; background:#ebebeb; padding-top:5px; position: relative; }
+.main_content .news_in_main .news_cell { min-height:110px; padding:0px 10px  }
+.main_content .news_in_main .news_cell .date { color:#000; font-weight:bold; margin-bottom:5px; border-bottom:1px solid #ccc;}
+.main_content .news_in_main .news_cell .thumb { float:left; width:140px}
+.main_content .news_in_main .news_cell .info { margin-left:140px;}
+.main_content .news_in_main .news_cell .info .name { color:#000; font-size:16px;}
+.main_content .news_in_main .news_cell .info .name a { color:#000; font-size:16px;}
+.main_content .news_in_main .news_cell .info .short_desc { font-size:12px;}
+
+#slider-code { height: 260px; overflow:hidden; }
+#slider-code .viewport { width: 100%; display:block; height: 220px; overflow: hidden; position: relative; }
+#slider-code .buttons {  }
+#slider-code .next {   }
+#slider-code .disable {  }
+#slider-code .overview { list-style: none; position: absolute; padding: 0; margin: 0; left: 0; top: 0; }
+#slider-code .overview li{  height: 110px; width:  100%;}
+#slider-code .overview li img { height:75px}
+#slider-code .nav_arrow { background:#d2d2ce; text-align:center; position:absolute; width:100%; padding:2px 0; bottom:0}
