--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -119,7 +119,7 @@
 	</div>
 </div>
 
-            <script src="/assets/jquery.tinycarousel.min.js" type="text/javascript"></script>
+            <%#= javascript_include_tag 'jquery.tinycarousel.min' %>
             <script type="text/javascript">
             $(document).ready(function(){
               $('#slider-code').tinycarousel({ axis: 'y', display: 2});
