--- a/app/views/home/_slider.html.erb
+++ b/app/views/home/_slider.html.erb
@@ -117,6 +117,7 @@
 	<a class="buttons prev" href="#"><img src="/assets/news_slide_up.png" /></a>
 	<a class="buttons next" href="#"><img src="/assets/news_slide_down.png" /></a>
 	</div>
+  <%= link_to 'Архив новостей', news_index_path %>
 </div>
 
             <%#= javascript_include_tag 'jquery.tinycarousel.min' %>
