expert council link changed to about us

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -26,7 +26,7 @@
             <li><%= link_to 'Яркий журнал', articles_path %></li>
             <li><%= link_to 'Фестиваль', page_path('org_komitet') %></li>
             <li><%= link_to 'Конкурсы', contests_path %></li>
-            <li><%= link_to 'Экспертный совет', experts_path %></li>
+            <li><%= link_to 'О нас', experts_path %></li>
             <li><%= link_to 'Спецпроекты', special_projects_path %></li>
           </ul>
         </div>
