--- a/app/views/experts/index.html.erb
+++ b/app/views/experts/index.html.erb
@@ -3,6 +3,15 @@
 <% end %>
 
 <div class="pages">
+  <div class="post_category_menu">
+    <ul>
+      <li class="experts_ico active"><a href="/experts">Экспертный совет</a></li>
+      <li class="sponsors_ico"><a href="/sponsors">Попечительский совет</a></li>
+      <li class="crew_ico"><a href="">Команда сайта???</a></li>
+      <li class="authors_ico"><a href="">Все авторы???</a></li>
+    </ul>
+    <div class="clear"></div>
+  </div>
   <div class="expert_list_wrapper">
   <%= render 'title' %>
     <div class="expert_list">
