--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -1,4 +1,13 @@
 <div class="post_list">
+  <div class="post_category_menu">
+    <ul>
+      <li class="experts_ico"><a href="/experts">Экспертный совет</a></li>
+      <li class="sponsors_ico active"><a href="/sponsors">Попечительский совет</a></li>
+      <li class="crew_ico"><a href="">Команда сайта???</a></li>
+      <li class="authors_ico"><a href="">Все авторы???</a></li>
+    </ul>
+    <div class="clear"></div>
+  </div>
   <h1>Спонсоры</h1>
   
   <div class="common">
