--- a/app/views/sponsors/show.html.erb
+++ b/app/views/sponsors/show.html.erb
@@ -1,6 +1,15 @@
 <div id="center">
   <div class="pages">
     <div class="common">
+  <div class="post_category_menu">
+    <ul>
+      <li class="experts_ico"><a href="/experts">Экспертный совет</a></li>
+      <li class="sponsors_ico active"><a href="/sponsors">Попечительский совет</a></li>
+      <li class="crew_ico"><a href="">Команда сайта???</a></li>
+      <li class="authors_ico"><a href="">Все авторы???</a></li>
+    </ul>
+    <div class="clear"></div>
+  </div>
       <h1><%= @sponsor.first_name + " " + @sponsor.last_name %></h1>
       <div class="post_info">
         <div class="thumb">
