--- a/app/views/experts/show.html.erb
+++ b/app/views/experts/show.html.erb
@@ -6,8 +6,8 @@
     <ul>
       <li class="experts_ico active"><a href="/experts">Экспертный совет</a></li>
       <li class="sponsors_ico"><a href="/sponsors">Попечительский совет</a></li>
-      <li class="crew_ico"><a href="">Команда сайта???</a></li>
-      <li class="authors_ico"><a href="">Все авторы???</a></li>
+      <li class="crew_ico"><a href="">Команда</a></li>
+      <li class="authors_ico"><a href="/authors">Авторы</a></li>
     </ul>
     <div class="clear"></div>
   </div>
