--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -1,4 +1,8 @@
-<div class="post_list">
+<% content_for :title do %>
+  Фестиваль Яркие Люди | Попечительский Совет
+<% end %>
+
+<div class="pages">
   <div class="post_category_menu">
     <ul>
       <li class="experts_ico"><a href="/experts">Экспертный совет</a></li>
@@ -8,27 +12,24 @@
     </ul>
     <div class="clear"></div>
   </div>
-  <h1>Спонсоры</h1>
-  
-  <div class="common">
-    <div class="news_container">
-      <% @sponsors.each do |sponsor| %>
-        <div class="preview_cell">
-          <div class="info">
-            <div class="thumb">
-              <%= link_to image_tag(sponsor.photo), sponsor %>
-            </div>
-            <div class="name">
-              <%= link_to sponsor.first_name+" "+sponsor.last_name, sponsor %>
-            </div>
-            <div class="date">
-              <%= sponsor.created_at.to_s(:main) %>
-            </div>
-          </div>
+  <div class="expert_list_wrapper">
+  <%= render 'sponsors_title' %>
+    <div class="expert_list">
+      
+    <% @sponsors.each do |sponsor| %>
+      <div class="exp_preview">
+        <%= link_to sponsor_path(sponsor) do %>
+        <div class="thumb">
+          <%= image_tag(sponsor.photo) %>
         </div>
-      <% end %>
+        <span class="name"><%= sponsor.first_name+" "+sponsor.last_name %></span>
+        <% end %>
+        
+        <span class="info"><%= truncate(sponsor.description, separator: '.', length: 140, omission: '.') %></span>
+      </div>
+    <% end %>
+      
+      <div class="clear"></div>
     </div>
-    <div class="clear"></div>
   </div>
-  
 </div>
