--- a/app/views/crew/index.html.erb
+++ b/app/views/crew/index.html.erb
@@ -1,5 +1,5 @@
 <% content_for :title do %>
-  Фестиваль Яркие Люди | Авторы
+  Фестиваль Яркие Люди | Команда
 <% end %>
 
 <div class="pages">
@@ -7,27 +7,28 @@
     <ul>
       <li class="experts_ico"><a href="/experts">Экспертный совет</a></li>
       <li class="sponsors_ico"><a href="/sponsors">Попечительский совет</a></li>
-      <li class="crew_ico"><a href="/crew">Команда</a></li>
-      <li class="authors_ico active"><a href="/authors">Авторы</a></li>
+      <li class="crew_ico active"><a href="/crew">Команда</a></li>
+      <li class="authors_ico"><a href="/authors">Авторы</a></li>
     </ul>
     <div class="clear"></div>
   </div>
   <div class="expert_list_wrapper">
-  <%= render 'authors_title' %>
+  <%= render 'crew_title' %>
     <div class="expert_list">
       
-    <% @authors.each do |author| %>
+    <% @crew.each do |tm| %>
       <div class="exp_preview">
         <div class="thumb">
-          <%= image_tag(author.avatar) %>
+          <%= image_tag(tm.photo) %>
         </div>
-        <span class="name"><%= author.name %></span>
+        <span class="name"><%= tm.name %></span>
         
-        <span class="info"><%= truncate(author.description, separator: '.', length: 140, omission: '.') %></span>
+        <span class="info"><%= tm.description %></span>
       </div>
     <% end %>
+      
       <div class="clear"></div>
-    <%= paginate @authors %>
+    <%= paginate @crew %>
     </div>
   </div>
 </div>
