--- a/app/views/sponsors/index.html.erb
+++ b/app/views/sponsors/index.html.erb
@@ -7,7 +7,7 @@
     <ul>
       <li class="experts_ico"><a href="/experts">Экспертный совет</a></li>
       <li class="sponsors_ico active"><a href="/sponsors">Попечительский совет</a></li>
-      <li class="crew_ico"><a href="">Команда</a></li>
+      <li class="crew_ico"><a href="/crew">Команда</a></li>
       <li class="authors_ico"><a href="/authors">Авторы</a></li>
     </ul>
     <div class="clear"></div>
