--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -22,7 +22,7 @@
             <%= link_to image_tag(article.picture.url), article %>
           </div>
           <span class="name"><%= link_to article.title, article %></span>
-          <span class="date"><%= Russian::strftime(article.created_at, "%e %B %Y") %></span>
+          <span class="date"><%= Russian::strftime(article.updated_at, "%e %B %Y") %></span>
         </div>
       </div>
       <% end %>
