--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -22,12 +22,12 @@
       <div class="center column">
         <div class="menu">
           <ul>
-            <li><%= link_to 'Места', activities_path %></li>
+            <li><%= link_to 'Детские студии', activities_path %></li>
+            <li><%= link_to 'Фестиваль', page_path('about_festival') %></li>
             <li><%= link_to 'Яркий журнал', articles_path %></li>
-            <li><%= link_to 'Фестиваль', page_path('org_komitet') %></li>
             <li><%= link_to 'Конкурсы', contests_path %></li>
-            <li><%= link_to 'О нас', experts_path %></li>
             <li><%= link_to 'Спецпроекты', special_projects_path %></li>
+            <li><%= link_to 'О нас', experts_path %></li>
           </ul>
         </div>
         
