--- a/app/views/articles/_items.html.erb
+++ b/app/views/articles/_items.html.erb
@@ -3,7 +3,7 @@
     <div class="thumb"><%= link_to image_tag(article.picture.url), article %></div>
     <div class="info">
       <%== article.short_description %><br>
-      <span class="date"><%= Russian::strftime(article.created_at, "%e %B %Y") %></span>
+      <span class="date"><%= Russian::strftime(article.updated_at, "%e %B %Y") %></span>
     </div>
     <div class="clear"></div>
   </div>
