--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -4,7 +4,7 @@
 <div class="pages">
   <div class="common">
     <h1><%= @article.title %> <%= favourite_block @article %></h1>
-    <strong><%= @article.author.name %>. <%= Russian::strftime(@article.created_at, "%A, %e %B %Y г.") %></strong>
+    <strong><%= @article.author.name %>. <%= Russian::strftime(@article.updated_at, "%A, %e %B %Y г.") %></strong>
     <div class="post_preview">
       <div class="thumb">
 	<%= image_tag @article.picture.url(:medium) %>
