--- a/app/views/home/_bright_magazine.html.erb
+++ b/app/views/home/_bright_magazine.html.erb
@@ -23,7 +23,7 @@
 	    <div class="cat_name"><span><%= article.category.title %></span></div>
 	    <div class="thumb"><%= link_to image_tag(article.picture.url), article_path(article) %></div>
 	    <div class="name"><%= link_to article.title, article_path(article) %></div>
-	    <div class="date"><%= article.created_at.to_s(:main) %></div>
+	    <div class="date"><%= article.updated_at.to_s(:main) %></div>
 	  </div>
 	</div>
       <% end %>
@@ -39,7 +39,7 @@
 		<div class="cat_name"><span><%= article.category.title %></span></div>
 		<div class="thumb"><%= link_to image_tag(article.picture.url), article_path(article) %></div>
 		<div class="name"><%= link_to article.title, article_path(article) %></div>
-		<div class="date"><%= article.created_at.to_s(:main) %></div>
+		<div class="date"><%= article.updated_at.to_s(:main) %></div>
 	      </div>
 	    </div>
 	  <% end %>
