--- a/app/views/participants/index.html.erb
+++ b/app/views/participants/index.html.erb
@@ -8,7 +8,7 @@
     <div class="post_category_menu">
       <ul>
         <li class="about_ico"><a href="/pages/about_festival">О фестивале</a></li>
-        <li class="creative_ico"><a href="">Творческая группа</a></li>
+        <li class="creative_ico"><a href="/creative_group">Творческая группа</a></li>
         <li class="participants_ico <%= 'active' unless @is_headliners_page %>"><a href="/participants?category=music_stage">Программа</a></li>
         <li class="headliners_ico <%= 'active' if @is_headliners_page %>"><a href="/participants">Хэдлайнеры</a></li>
         <li class="org_ico"><a href="/pages/org_komitet">Оргкомитет</a></li>
