--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -31,7 +31,10 @@ a:hover { font-family: Verdana, Geneva, sans-serif; color:#464646; font-size:14p
 .wrapper  { min-width:960px; max-width:1235px; margin:auto; position:relative}
 
 a, img, input, button, textarea, select { outline: none; resize:none }
+textarea { font-family: Verdana, Geneva, sans-serif; font-size:14px; }
 strong, b { font-weight:bold; }
+
+button { padding: 5px 7px; color: #fff; background-color: #b73652; border: none; -webkit-box-shadow: 3px 3px 5px #ccc; -moz-box-shadow: 3px 3px 5px #ccc; box-shadow: 3px 3px 5px #ccc; -webkit-border-radius: 2px; -moz-border-radius: 2px; -khtml-border-radius: 2px; border-radius: 2px; }
 
 h1 { font-size:22px; color:#4f4f4f; font-family:Futura}
 
